Explore screen and bottom navigation

--- a/src/i18n/locales/vn/translation.json
+++ b/src/i18n/locales/vn/translation.json
@@ -13,6 +13,7 @@
     "Notice wrong password or email": "Email hoặc mật khẩu bạn đã nhập không chính xác. Vui lòng thử lại hoặc nhấn nút “Quên mật khẩu”",
     "Sign up": "Đăng ký",
     "Event": "Sự kiện",
-    "Post": "Bài viết"
+    "Post": "Bài viết",
+    "Home": "Nhà"
   }
 }
