--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -13,6 +13,7 @@
     "Notice wrong password or email": "Your email or password was incorrect. Please try again or tap “Forgot password” to reset it",
     "Sign up": "Sign up",
     "Event": "Event",
-    "Post": "Post"
+    "Post": "Post",
+    "Home": "Home"
   }
 }
